<resources>
    <string name="app_name">todo</string>
    <string name="action_settings">Settings</string>

    <string name="todo_my_tasks">Mis Tareas</string>
    <string name="todo_description">Descripcion</string>
    <string name="todo_name">Nombre de la tarea</string>
    <string name="todo_add_images">Añadir Imagenes</string>
    <string name="todo_save">Guardar</string>
    <string name="todo_password">Contraseña</string>
    <string name="todo_user">Usuario</string>
    <string name="todo_welcome">Bienvenido</string>
    <string name="todo_sign_in">Ingresar</string>
    <string name="todo_register">Aun no tengo un usuario. <b>Registrarme</b></string>
    <string name="todo_create_user">Crear usuario</string>
    <string name="todo_create">Crear</string>
    <string name="todo_confirm_password">Confirmar Contraseña</string>
    <string name="todo_empty_fields_error">Debe completar todos los datos</string>
    <string name="todo_passwords_error">Contraseñas no coinciden</string>
    <string name="todo_error">Se encontro un error inesperado, intente mas tarde</string>
    <string name="todo_edit">Editar</string>
    <string name="todo_delete">Eliminar</string>
</resources>